# rust-thrift-tls

./: .gitignore  README.md
rust-thrift-tls/: Cargo.toml  README.md
rust-thrift-tls/src/: lib.rs  tls_socket.rs  tls_threaded.rs
thrift-tls-example/: Cargo.toml  setup.sh
thrift-tls-example/src/: lib.rs  simple_service.rs
